--- a/Sign in.html
+++ b/Sign in.html
@@ -15,7 +15,7 @@
     <section class="my-5">
         <div class="container">
             <div class="loginContent w-75 m-auto text-center py-5">
-                <h1 id="title" class="mb-4">Smart Login Systemmmmmmm</h1>
+                <h1 id="title" class="mb-4">Smart Login Systemmsssss</h1>
                 <input type="email" class="form-control w-75 m-auto bg-transparent" placeholder="Enter your email"
                     id="userEmailSignIn" name="email">
                 <input type="password" class="form-control w-75 m-auto bg-transparent" placeholder="Enter your password"
