--- a/bookmarks.html
+++ b/bookmarks.html
@@ -12,6 +12,7 @@
 </head>
 
 <body onload="welcomingUser()">
+
     <section class="">
         <div class="d-flex text-center w-100 my-5">
             <div class="w-25 m-auto">
@@ -36,9 +37,7 @@
             <input type="text" class="form-control w-50 m-auto" placeholder="Search bookmarks"
                 onkeyup="searchBookmarks(this.value)">
         </div>
-        <div class="m-auto py-5" id="container">
-
-        </div>
+        <div class="m-auto py-5" id="container"></div>
     </section>
 
     <footer>
